# twitter_cli_rust

./: .env.smple  .gitignore  Cargo.toml  Config.toml.sample
src/: main.rs
